21. May 2011 Christoph Thielecke <crissi99@gmx.de>
	- patch for keyboard accel on adddialog added (thanks to lis6502@gmail.com and tadzikes@gmail.com)
	- allow to export only media name on csv export
	- export media name at csv export too (fixes: 3302225)
	- parsing xml content fixed (fixes: 3302226)

08. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- version changed to 1.2

07. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- speedup parsing a little bit

06. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- import report generated advanced disk dialog fixed if file type was not given

05. Mar 2011 Christoph Thielecke <crissi99@gmx.de>
	- restore normal cursor on save new created catalog fixed
	- empty media name if auto mount is disabled fixed

23. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- scan cdrom path if not automount fixed

21. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- context menu option for changing media type added
	- save as now adds history item

10. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- unsharp search option in find dialog added

05. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- crash caused divide by zero fixed

04. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- advanced disk catalog import info added
	- csv import added (WhereIsIt, see README_IMPORT for details)
	- jump to selected item in find dialog fixed
	- dont open export dialog if no catalog is open
	- xml export added

03. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- reading utfs encoding fixed
	- possibility for cancel searching added
	- possibility for cancel openening catalog added
	- made extra colum for size at result listview at search dialog
	- sizes of busy dialog adjusted
	- file archivist catalog import added (thanks to martin brunner)
	- csv import added (Advanced Disk Catalog)
	- displaying units fixed

02. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- qmake project file order changed (workaround for qmake bug)